manifests/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
